--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4001
-MongoDBURI="mongodb://localhost:27017/bookData"
+MongoDBURI="mongodb+srv://prasanna99navale:987654321@cluster0.mdldjnk.mongodb.net/"
+NODE_ENV = "production"
