--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PORT=4001
-MongoDBURI="mongodb+srv://prasanna99navale:987654321@cluster0.mdldjnk.mongodb.net/"
-NODE_ENV = "production"
+MongoDBURI="mongodb+srv://prasanna99navale:987654321@cluster0.mdldjnk.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0"
